overflow fix

--- a/src/core/utilities.scss
+++ b/src/core/utilities.scss
@@ -18,7 +18,7 @@
 .auto-height {
   margin:0 auto;
   min-height: 200px;
-  overflow-y:scroll;
+  overflow-y:auto;
 }
 
 .ellipsis {
